kubernetes/overlays/mainnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openindex-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "openindex-ingress"
    networking.gke.io/managed-certificates: openindex-managed-cert
spec:
  rules:
  - host: "openindex.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flo-explorer-service
            port:
              number: 80
  - host: "www.openindex.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flo-explorer-service
            port:
              number: 80
  - host: "flo.openindex.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flo-explorer-service
            port:
              number: 80
  - host: "flocha.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flo-explorer-service
            port:
              number: 80
  - host: "www.flocha.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flo-explorer-service
            port:
              number: 80
  - host: "mainnet.flocha.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flo-explorer-service
            port:
              number: 80
  - host: "livenet.flocha.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flo-explorer-service
            port:
              number: 80
